; ModuleID = '/home/carl/AnghaBench/linux/drivers/video/fbdev/extr_tdfxfb.c_att_outb.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/video/fbdev/extr_tdfxfb.c_att_outb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tdfx_par = type { i32 }

@IS1_R = common dso_local global i32 0, align 4
@ATT_IW = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.tdfx_par*, i32, i32)* @att_outb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @att_outb(%struct.tdfx_par* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.tdfx_par*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i8, align 1
  store %struct.tdfx_par* %0, %struct.tdfx_par** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load %struct.tdfx_par*, %struct.tdfx_par** %4, align 8
  %9 = load i32, i32* @IS1_R, align 4
  %10 = call zeroext i8 @vga_inb(%struct.tdfx_par* %8, i32 %9)
  store i8 %10, i8* %7, align 1
  %11 = load %struct.tdfx_par*, %struct.tdfx_par** %4, align 8
  %12 = load i32, i32* @ATT_IW, align 4
  %13 = load i32, i32* %5, align 4
  %14 = call i32 @vga_outb(%struct.tdfx_par* %11, i32 %12, i32 %13)
  %15 = load %struct.tdfx_par*, %struct.tdfx_par** %4, align 8
  %16 = load i32, i32* @ATT_IW, align 4
  %17 = load i32, i32* %6, align 4
  %18 = call i32 @vga_outb(%struct.tdfx_par* %15, i32 %16, i32 %17)
  ret void
}

declare dso_local zeroext i8 @vga_inb(%struct.tdfx_par*, i32) #1

declare dso_local i32 @vga_outb(%struct.tdfx_par*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
